@@ -1,3 +1,7 @@
+2006-01-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/music-functions.scm (skip->rest): add skip->rest
+
 2006-01-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/font-config.cc (init_fontconfig): call FcConfigBuildFonts()
